chore(tooling) move pdf generation to docker-compose and bump decktape to 3.7.0
- Decktape 3.7.0 is the last working version on Apple Silicon CPUs

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,11 @@ services:
   build:
     <<: *slides-base
     command: "build"
+
+  pdf:
+    image: ghcr.io/astefanutti/decktape:3.7.0
+    user: ${CURRENT_UID}
+    volumes:
+      - ${DIST_DIR}:/slides
+    command: >
+      /slides/index.html /slides/slides.pdf --size='2048x1536' --pause 0
