--- a/npm-packages/package.json
+++ b/npm-packages/package.json
@@ -7,6 +7,7 @@
         "@asciidoctor/reveal.js": "5.0.1",
         "asciidoctor": "^3.0.2",
         "browser-sync": "^2.29.3",
+        "clipboard": "2.0.11",
         "gulp": "4.0.2",
         "gulp-autoprefixer": "8.0.0",
         "gulp-csso": "4.0.1",
