--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DIST_DIR=./dist
 PRESENTATION_URL=http://localhost:8000
 REPOSITORY_URL=file://./
 CURRENT_UID=0 # Root by default
+BUILD_DIR=/tmp/dist
