--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -41,7 +41,7 @@ jobs:
   build-pdf:
     name: 'Build PDF'
     runs-on: ubuntu-latest
-    if: github.event_name == "push"
+    # if: github.event_name == "push"
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
@@ -56,8 +56,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [build-slides,build-pdf]
-    # Only deploy my branches or my own pull requests
-    if: github.event_name == "push"
+    # Only run deploy when pushing code on a branch of the repository
+    if: github.event_name == 'push'
     steps:
     - name: 'Download dist/ Artefacts'
       uses: actions/download-artifact@v3
