fix: update named references from last year course
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/npm-packages/package.json
+++ b/npm-packages/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "esgi-containers-ci-cd",
-    "version": "1.0.0",
-    "description": "🇫🇷 Cours ESGI : Orchestration de conteneurs et intégration continue",
-    "repository": "https://github.com/dduportal/esgi-containers-ci-cd",
+    "name": "esgi-courses",
+    "version": "2.0.0",
+    "description": "🇫🇷 Cours ESGI de Damien Duportal",
+    "repository": "https://github.com/dduportal/esgi-course",
     "devDependencies": {
         "@asciidoctor/reveal.js": "5.0.1",
         "asciidoctor": "^3.0.2",
@@ -18,8 +18,8 @@
         "merge-stream": "2.0.0",
         "qrcode": "1.5.3",
         "reveal.js-copycode": "1.1.2",
-        "reveal.js-plugins": "4.2.0",
+        "reveal.js-plugins": "4.2.1",
         "@highlightjs/cdn-assets": "11.8.0",
-        "sass": "^1.64.1"
+        "sass": "^1.66.1"
     }
 }
