--- a/npm-packages/package.json
+++ b/npm-packages/package.json
@@ -1,25 +1,25 @@
 {
     "name": "esgi-courses",
-    "version": "2.0.0",
+    "version": "3.0.0",
     "description": "🇫🇷 Cours ESGI de Damien Duportal",
     "repository": "https://github.com/dduportal/esgi-course",
     "devDependencies": {
-        "@asciidoctor/reveal.js": "5.0.1",
-        "asciidoctor": "^3.0.2",
-        "browser-sync": "^2.29.3",
+        "@asciidoctor/reveal.js": "5.1.0",
+        "asciidoctor": "^3.0.4",
+        "browser-sync": "^3.0.2",
         "clipboard": "2.0.11",
-        "gulp": "4.0.2",
-        "gulp-autoprefixer": "8.0.0",
+        "gulp": "5.0.0",
+        "gulp-autoprefixer": "9.0.0",
         "gulp-csso": "4.0.1",
         "gulp-exec": "5.0.0",
         "gulp-ignore": "3.0.0",
         "gulp-rename": "2.0.0",
         "gulp-sass": "5.1.0",
-        "merge-stream": "2.0.0",
-        "qrcode": "1.5.3",
-        "reveal.js-copycode": "1.1.2",
-        "reveal.js-plugins": "4.2.1",
-        "@highlightjs/cdn-assets": "11.8.0",
-        "sass": "^1.66.1"
+        "qrcode": "1.5.4",
+        "reveal.js-copycode": "1.2.0",
+        "reveal.js-plugins": "4.2.5",
+        "reveal.js-menu": "2.1.0",
+        "@highlightjs/cdn-assets": "11.10.0",
+        "sass": "^1.78.0"
     }
 }
